# neuralwatermark

./: AUTHORS.rst  LICENSE  README.md  index.md  mkdocs.yml  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
docs/: contributing.md  index.md  installation.md  neuralwatermark.md  usage.md
neuralwatermark/: __init__.py  neuralwatermark.py  pyproject.toml
neuralwatermark/neuralwatermark/: neuralwatermark.py
neuralwatermark/tests/: test_neuralwatermark.py
tests/: __init__.py  test_neuralwatermark.py
