[tool.poetry]
name = "neuralwatermark"
version = "0.1.0"
description = ""
authors = ["Doodle <saurabh.pandey.2171993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
